--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
     "env-cmd": "^10.1.0",
+    "file-saver": "^2.0.5",
     "google-maps-react": "^2.0.6",
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
