--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@app-masters/react-cloudinary-uploader": "^0.1.42",
     "@popperjs/core": "^2.11.5",
     "@react-google-maps/api": "^2.12.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -25,6 +26,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "react-time-picker-input": "^2.0.10",
+    "react-tinder-card": "^1.4.5",
     "react-toastify": "^9.0.4",
     "web-vitals": "^2.1.4"
   },
