--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "bootstrap-material-design": "^4.1.1",
     "dotenv": "^16.0.1",
     "env-cmd": "^10.1.0",
     "file-saver": "^2.0.5",
@@ -21,6 +22,7 @@
     "react": "^18.1.0",
     "react-css-transition-replace": "^4.0.5",
     "react-dom": "^18.1.0",
+    "react-email-validator": "^1.0.2",
     "react-places-autocomplete": "^7.3.0",
     "react-query": "^3.39.1",
     "react-router-dom": "^5.2.0",
