--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.14.0",
+    "@types/jest": "^28.1.8",
+    "@types/js-cookie": "^3.0.2",
+    "@types/node": "^18.7.13",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-material-design": "^4.1.1",
@@ -30,6 +37,7 @@
     "react-time-picker-input": "^2.0.10",
     "react-tinder-card": "^1.4.5",
     "react-toastify": "^9.0.4",
+    "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
